tweaked width of filter search box to prevent wrapping

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -560,7 +560,7 @@ ul#filter {
     display: inline;
     float: left;
     height: 29px;
-    margin: 0 6px 0 0;
+    margin: 0 10px 0 0;
     width: 67px;
     form {
       display: inline;
@@ -575,7 +575,7 @@ ul#filter {
       height: 18px;
       margin: 0;
       padding: 5px 6px 5px 10px;
-      width: 155px;
+      width: 220px;
     }
     img {
       display: none;
